@@ -1,4 +1,4 @@
-/* $Id: views.css,v 1.11 2008-06-06 23:08:00 merlinofchaos Exp $ */
+/* $Id: views.css,v 1.11.6.1 2009-12-23 21:30:27 merlinofchaos Exp $ */
 .views-exposed-form .views-exposed-widget {
   float: left;
   padding: .5em 1em 0 0;
@@ -20,6 +20,17 @@
 
 .views-exposed-widgets {
   margin-bottom: .5em;
+}
+
+/* table style column align */
+.views-align-left {
+  text-align: left;
+}
+.views-align-right {
+  text-align: right;
+}
+.views-align-center {
+  text-align: center;
 }
 
 html.js a.views-throbbing,
